overflow fix

--- a/cart.css
+++ b/cart.css
@@ -1,6 +1,10 @@
 *{
     box-sizing: border-box;
-    overflow: hidden;
+
+}
+body{
+    overflow-x: hidden;
+    overflow-y: auto ;
 }
 /* header*/
 header h3{
@@ -75,4 +79,6 @@ footer{
 /*main*/
 main{
     color: #ffff !important;
+    width: 100%;
+    height: 110vh;
 }
